# ai-engineer

./: .gitignore  LICENSE  README.md  ai-engineer  ai-engineer-ctrl  db.sqlite3  pyproject.toml
ai-engineer-data/: code-review.md  project-context.md
api/: urls.py
api/views/: __init__.py
api/views/agent/analyze/: __init__.py  codereview.py
api/views/llm/: prompt.py
api/views/ragindex/: delete.py  list.py  vectorize.py
common/agent/: __init__.py  analyze.py  analyze_codereview_prompts.py  analyze_projectcontext_prompts.py  analyze_prompts.py
common/clone/: __init__.py  create.py  delete.py  files.py  list.py  write_file.py
common/llm/: prompt.py
common/setup/: __init__.py  newindex.py
docs/: api-endpoints.md  api-server-control-script.md  cli.md  python-execution-environment.md
global/: .env.sample  settings.py  urls.py
