[tool.poetry]
name = "ai-engineer"
version = "0.1.0"
description = "Agentic AI example with managed github repository clones, RAG, API, CLI, tool interfaces."
authors = ["Christian Gribneau <c@vyk.net>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "<3.13,^3.12"
aiohappyeyeballs = "2.4.3"
aiohttp = "^3.9.5"
aiosignal = "1.3.1"
attrs = "24.2.0"
certifi = "2024.8.30"
charset-normalizer = "3.4.0"
et-xmlfile = "1.1.0"
frozenlist = "1.5.0"
idna = "3.10"
multidict = "6.1.0"
numpy = "^1.26.0"
openai = "1.52"
openpyxl = "3.1.5"
pandas = "2.2.3"
pandas-stubs = "2.2.3.241009"
pinecone = "5.3.1"
pinecone-plugin-inference = "1.1.0"
pinecone-plugin-interface = "0.0.7"
propcache = "0.2.0"
python-dateutil = "2.9.0.post0"
python-dotenv = "1.0.1"
pytz = "2024.2"
requests = "2.32.3"
six = "1.16.0"
tqdm = "4.66.5"
types-pytz = "2024.2.0.20241003"
typing-extensions = "4.12.2"
tzdata = "2024.2"
urllib3 = "2.2.3"
yarl = "1.16.0"
django = "^5.1.2"
djangorestframework = "^3.15.2"
django-environ = "^0.11.2"
langchain-core = "^0.3.15"
langchain-openai = "^0.2.5"
langchain-pinecone = "^0.2.0"
langchain = "^0.3.7"
github = {git = "https://github.com/VarMonke/GitHub-API-Wrapper.git"}
pygit2 = "^1.16.0"
protobuf = "^5.28.3"
google-api-python-client = "^2.151.0"
protoc-gen-openapiv2 = "^0.0.1"
grpcio = "^1.67.1"
langgraph = "^0.2.45"
langchain-community = "^0.3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
